# stack

./: .gitignore  LICENSE.md  README.md  commit.hs  org.cabal  stack.yaml
.stack-work/install/x86_64-osx/lts-13.15/8.6.4/doc/org-0.0.1.0/: LICENSE.md
.stack-work/install/x86_64-osx/lts-13.15/8.6.4/flag-cache/: org-0.0.1.0-GTyh6v3N2YJ6p5b5GTVCSz
.stack-work/install/x86_64-osx/lts-13.15/8.6.4/lib/x86_64-osx-ghc-8.6.4/: libHSorg-0.0.1.0-GTyh6v3N2YJ6p5b5GTVCSz-ghc8.6.4.dylib
.stack-work/install/x86_64-osx/lts-13.15/8.6.4/pkgdb/: org-0.0.1.0-GTyh6v3N2YJ6p5b5GTVCSz.conf  package.cache
demo/: demo.sh  magic.sh
dotfiles/: .bashrc  .twmrc  .xsession  README.md  X.sh  fonts.sh  install.sh
dotfiles/xmonad/: README.md  xmonad-session-rc  xmonad.hs
fedora/: .Xdefaults  .bashrc  .gitconfig  .powerline-shell.json  .zshenv  .zshrc  README.md  colors.sh  fonts.sh  graphical.sh  haskell.sh  install.sh  isolinux.cfg  ks.cfg  local.repo  mkisofs.sh  pub.conf
functional/: README.md  maybe.py  monad.py
go/: Makefile
go/src/commit/: commit.go  commit_test.go
go/src/confidence/: confidence.go  confidence_test.go
go/src/cycle/: cycle.go  cycle_test.go
go/src/ooo/: ooo.go  ooo_test.go
go/test/: test_capability.json  test_cycle.json
haskell/: charcount.hs  metrics.hs  stack.yaml  story.hs  travel.hs  wordcount.hs
haskell/src/: Util.hs
haskell/tasks/: stack.yaml
haskell/tasks/src/: DisplayAsset.hs  DisplayJSON.hs
macosx/: .bash_profile  .gitconfig  .powerline-shell.json  .spacemacs  .zshenv  .zshrc  EMACS.md  README.md  brew.sh  dock.sh  emacs  install.sh  lmutracker.m  theme.el
nixos/: .gitconfig  .zshenv  .zshrc  README.md  config.yaml  configuration.nix  haskell.sh  install.sh
python/api/: Makefile  README.md  commit.hs
python/api/src/: catalog.py
python/api/src/factory/: __init__.py  image.py  iso.py
python/functional/: func_package.py  infinity.py  monadic_package.py
scripts/: backup.sh  charcount.hs  demo.sh  max.sh  metrics.hs  story.hs  travel.hs  wordcount.hs
src/: Main.hs
tasks/: mesos-frameworks.cabal
tasks/src/: Asset.hs  Main.hs  QueryJSON.hs  Util.hs
