name:                org
version:             0.0.1.0
synopsis:            stack
license:             MIT
license-file:        LICENSE.md
author:              Joel E Carlson
maintainer:          "Joel E Carlson" <joel.elmer.carlson@gmail.com>
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Util
  other-modules:
  build-depends:       base
  default-language:    Haskell2010

executable Main
  hs-source-dirs: src
  main-is:        Main.hs
  other-modules: Util
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends: base
                , directory
                , time
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/joelelmercarlson/stack
