name:                mesos-frameworks
version:             0.0.1.0
synopsis:            stack
license:             MIT
license-file:        LICENSE.md
author:              Joel E Carlson
maintainer:          "Joel E Carlson" <joel.elmer.carlson@gmail.com>
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Asset
  other-modules:
  build-depends:       base
                     , aeson
                     , template-haskell
  default-language:    Haskell2010

  hs-source-dirs:      src
  exposed-modules:     DisplayAsset
  other-modules:
  build-depends:       base
                     , containers
                     , time
                     , text
  default-language:    Haskell2010

  hs-source-dirs:      src
  exposed-modules:     DisplayJSON
  other-modules:
  build-depends:       base
  default-language:    Haskell2010

  hs-source-dirs:      src
  exposed-modules:     QueryJSON
  other-modules:
  build-depends:       base
                     , aeson
                     , bytestring
                     , http-client
                     , http-client-tls
                     , http-types
  default-language:    Haskell2010

  hs-source-dirs:      src
  exposed-modules:     Util
  other-modules:
  build-depends:       base
  default-language:    Haskell2010

executable Main
  hs-source-dirs: src
  main-is:        Main.hs
  other-modules: Asset
                , DisplayAsset
                , DisplayJSON
                , QueryJSON
                , Util
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends: base
                , aeson
                , bytestring
                , containers
                , http-client
                , http-client-tls
                , http-types
                , mesos-frameworks
                , time
                , text
  default-language: Haskell2010
